--- a/12_understand-and-develop-new-shiny-inputs.Rmd
+++ b/12_understand-and-develop-new-shiny-inputs.Rmd
@@ -232,10 +232,6 @@ $(function() {
 });
 ```
 
-## Find the input {-}
-
-![](image/12-understand-shiny-inputs/01-shiny-find-inputs.png)
-
 
 ## Re-create textInput {-}
 
@@ -262,14 +258,19 @@ customTextInputExample <- function(binding_step) {
   }
   shinyApp(ui, server)
 }
-
-customTextInputExample(1)
 ```
 
 
 ## Debbuging JS methods {-}
 
 1. Run the app.
+
+```{r}
+#| eval: false
+
+OSUICode::customTextInputExample(1)
+```
+
 2. Open the developer tools
 3. On the sources tab, look for the `customTextInputBinding.js` script 
 4. Put a breakpoints in the `find` method 
@@ -339,7 +340,7 @@ customTextInputExample(2)
 
 ![](image/12-understand-shiny-inputs/03-get-value-binding.png)
 
-## Updating Inputs From R {-}
+## Updating Inputs From Server {-}
 
 1. Define the **setValue** method.
 
@@ -388,7 +389,7 @@ Exposes methods:
 - **sendCustomMessage** sends messages from R to JS. _If `shiny.trace = TRUE` the sent JSON is displayed_.
 
 
-## updateCustomTextInput {-}
+## Sending one value from server {-}
 
 1. Use the `getDefaultReactiveDomain()`function to **recover the current session**.
 2. Use the **sendInputMessage** is used to update inputs from the server.
@@ -405,7 +406,7 @@ updateCustomTextInput <- function(
 }
 ```
 
-## updateCustomTextInput {-}
+## Sending several values from server {-}
 
 To pass multiple elements to update:
 
@@ -432,14 +433,12 @@ updateCustomTextInput <- function(
 ```
 
 
-## updateCustomTextInput {-}
+## Triggering the update from a buttom {-}
 
-Now we just new to add and observer to update the input from the server to the client.
+![](image/12-understand-shiny-inputs/05-update-input-text.png)
 
 ```{r}
 #| eval: false
-
-OSUICode::updateCustomTextInputExample(3)
 
 updateCustomTextInputExample <- function(binding_step) {
   ui <- fluidPage(
@@ -463,9 +462,9 @@ updateCustomTextInputExample <- function(binding_step) {
 }
 ```
 
-![](image/12-understand-shiny-inputs/05-update-input-text.png)
 
-## Sending custom message from debugger {-}
+
+## Use the debbuger to send your own message {-}
 
 1. Run the shiny app.
 
@@ -490,7 +489,7 @@ OSUICode::updateCustomTextInputExample(3)
 > Please note that after clicking the button, the output **value still does not change**.
 
 
-## Updating outputs {-}
+## Updating outputs when typing {-}
 
 **subscribe** listens to events defining Shiny to update the input value and make it available in the app.
 
@@ -509,6 +508,53 @@ subscribe: function(el, callback) {
 ```
 
 > Name convention used: EVENT_LISTENER.BINDING_NAME
+
+
+## Updating outputs when clicking a buttom {-}
+
+Solve this problem we need to:
+
+1. Extend the definition of the `subscript` method by using the `change` event *(triggers when an element is updated)*.
+
+```javascript
+  subscribe: function(el, callback) {
+    $(el).on('keyup.customTextBinding input.customTextBinding', function(event) {
+      console.log(event);
+      callback();
+    });
+  
+    $(el).on('change.customTextBinding', function(event) {
+      callback(false);
+    });
+  }
+```
+
+## Updating outputs when clicking a buttom {-}
+
+2. Trigger a `change` event to trigger the subscribe method.
+
+```javascript
+  receiveMessage: function(el, data) {
+    if (data.hasOwnProperty('value')) {
+      this.setValue(el, data.value);
+      $(el).trigger('change');
+    }
+  }
+```
+
+## Setting rate policies {-}
+
+We don’t want to flood the server with useless update requests.
+
+```javascript
+getRatePolicy: function() {
+  return {
+    policy: 'debounce', # direct or throttle
+    delay: 250
+  };
+},
+```
+
 
 
 ## Meeting Videos
